# OrotheGameUnrealPrototype

./: .gitignore  CMakeLists.txt  OroUnrealPrototype.uproject  OroUnrealPrototype.workspace  OroUnrealPrototypeCodeCompletionFolders.txt  OroUnrealPrototypeCodeLitePreProcessor.txt  README.md
Config/: DefaultEditor.ini  DefaultEditorUserSettings.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/AnimStarterPack/: Aim_Space_Hip.uasset  Aim_Space_Ironsights.uasset  BS_CrouchWalk.uasset  BS_Jog.uasset  Crouch_Idle_Rifle_Hip.uasset  Crouch_Idle_Rifle_Ironsights.uasset  Crouch_Walk_Bwd_Rifle_Hip.uasset  Crouch_Walk_Bwd_Rifle_Ironsights.uasset  Crouch_Walk_Fwd_Rifle_Hip.uasset  Crouch_Walk_Fwd_Rifle_Ironsights.uasset  Crouch_Walk_Lt_Rifle_Hip.uasset  Crouch_Walk_Lt_Rifle_Ironsights.uasset  Crouch_Walk_Rt_Rifle_Hip.uasset  Crouch_Walk_Rt_Rifle_Ironsights.uasset  Crouch_to_Stand_Rifle_Hip.uasset  Crouch_to_Stand_Rifle_Ironsights.uasset  Death_1.uasset  Death_2.uasset  Death_3.uasset  Death_Ironsights_1.uasset  Death_Ironsights_2.uasset  Equip_Pistol_Standing.uasset  Equip_Rifle_Standing.uasset  Fire_Rifle_Hip.uasset  Fire_Rifle_Ironsights.uasset  Fire_Shotgun_Hip.uasset  Fire_Shotgun_Ironsights.uasset  Hit_React_1.uasset  Hit_React_2.uasset  Hit_React_3.uasset  Hit_React_4.uasset  Idle_Pistol.uasset  Idle_Rifle_Hip.uasset  Idle_Rifle_Hip_Break1.uasset  Idle_Rifle_Hip_Break2.uasset  Idle_Rifle_Ironsights.uasset  Jog_Bwd_Rifle.uasset  Jog_Fwd_Rifle.uasset  Jog_Lt_Rifle.uasset  Jog_Rt_Rifle.uasset  (+27 more)
Content/AnimStarterPack/UE4_Mannequin/Materials/: M_UE4Man_Body.uasset  M_UE4Man_ChestLogo.uasset
Content/AnimStarterPack/UE4_Mannequin/Mesh/: SK_Mannequin.uasset  SK_Mannequin_PhysicsAsset.uasset  UE4_Mannequin_Skeleton.uasset
Content/AnimStarterPack/UE4_Mannequin/Textures/: UE4Man_Logo_N.uasset  UE4_LOGO_CARD.uasset  UE4_Mannequin_MAT_MASKA.uasset  UE4_Mannequin_occlusion_Mobile.uasset
Content/Animations/: Aim_Space_Hip.uasset  Aim_Space_Ironsights.uasset  AnimationBlendSpace.uasset  BS_CrouchWalk.uasset  BS_Jog.uasset  Crouch_Idle_Rifle_Hip.uasset  Crouch_Idle_Rifle_Ironsights.uasset  Crouch_Walk_Bwd_Rifle_Hip.uasset  Crouch_Walk_Bwd_Rifle_Ironsights.uasset  Crouch_Walk_Fwd_Rifle_Hip.uasset  Crouch_Walk_Fwd_Rifle_Ironsights.uasset  Crouch_Walk_Lt_Rifle_Hip.uasset  Crouch_Walk_Lt_Rifle_Ironsights.uasset  Crouch_Walk_Rt_Rifle_Hip.uasset  Crouch_Walk_Rt_Rifle_Ironsights.uasset  Crouch_to_Stand_Rifle_Hip.uasset  Crouch_to_Stand_Rifle_Ironsights.uasset  Death_1.uasset  Death_2.uasset  Death_3.uasset  Death_Ironsights_1.uasset  Death_Ironsights_2.uasset  Enemy_Idle.uasset  Enemy_Walk.uasset  Equip_Pistol_Standing.uasset  Equip_Rifle_Standing.uasset  Fire_Rifle_Hip.uasset  Fire_Rifle_Ironsights.uasset  Fire_Shotgun_Hip.uasset  Fire_Shotgun_Ironsights.uasset  Hit_React_1.uasset  Hit_React_2.uasset  Hit_React_3.uasset  Hit_React_4.uasset  Idle_Pistol.uasset  Idle_Rifle_Hip.uasset  Idle_Rifle_Hip_Break1.uasset  Idle_Rifle_Hip_Break2.uasset  Idle_Rifle_Ironsights.uasset  Jog_Bwd_Rifle.uasset  (+30 more)
Content/Animations/Blendspaces/: Blendspace.uasset  NewBlendSpace.uasset
Content/Animations/UE4_Mannequin/Materials/: M_UE4Man_Body.uasset  M_UE4Man_ChestLogo.uasset
Content/Animations/UE4_Mannequin/Mesh/: SK_Mannequin.uasset  SK_Mannequin_PhysicsAsset.uasset  UE4_Mannequin_Skeleton.uasset
Content/Animations/UE4_Mannequin/Textures/: UE4Man_Logo_N.uasset  UE4_LOGO_CARD.uasset  (+2 more)
Content/GameMode/: MockGameMode.uasset
Content/Levels/: Level1.umap  Level1_BuiltData.uasset  Level2.umap  MockLevelCombat.umap
Content/Material/: TutorialTPP_Mat.uasset  WeaponPartMaterial.uasset
Content/Material/Child_Material/: M_grass_basic_Inst.uasset
Content/Material/Master_Material/: M_grass_basic.uasset
Content/Materials/: Cobblestone_LayerInfo.uasset  Dirt_LayerInfo.uasset  Grass_LayerInfo.uasset  LaserBulbMaterial.uasset  M_Brick_Clay_Beveled.uasset  M_Brick_Clay_New.uasset  M_Brick_Clay_Old.uasset  Rock_LayerInfo.uasset  TerrainMaterial.uasset  WeaponPartMaterial.uasset
Content/Meshes/: LaserBulbStaticMesh.uasset
Content/Meshes/Grass/: SM_grass_patch3.uasset  SM_grass_patch6.uasset
Content/Meshes/Projectiles/: LaserBulbStaticMesh.uasset
Content/Models/Geometry/: Cube.uasset  Cube_DM.uasset  Floor.uasset  Floor_400x400.uasset  OWeaponCube.uasset  Sphere.uasset  Sphere_DM.uasset
Content/Particle/: P_leave.uasset
Content/Particles/: LaserBulbParticleSystem.uasset  LaserBulbParticleSystemSplash.uasset  LaserBulbParticleSystemSplash2.uasset  LaserBulbSplittingParticleSystem.uasset  LaserBulbWeaponParticleSystem.uasset
Content/Scripts/BlueprintInterfaces/: IDestroyable.uasset
Content/Skybox/: SunsetAmbientCubemap.uasset  SunsetAmbientMaterial.uasset  SunsetMaterial.uasset
Content/StarterContent/Architecture/: Floor_400x400.uasset
Content/StarterContent/Maps/: Minimal_Default.umap
Content/StarterContent/Materials/: M_Basic_Floor.uasset  M_Ground_Grass.uasset  M_Ground_Gravel.uasset  M_Rock_Slate.uasset
Content/StarterContent/Particles/: P_Ambient_Dust.uasset  P_Fire2.uasset  P_Smoke.uasset
Source/: OroUnrealPrototype.Target.cs  OroUnrealPrototypeEditor.Target.cs
Source/OroUnrealPrototype/: OroUnrealPrototype.Build.cs  OroUnrealPrototype.cpp
Source/OroUnrealPrototype/Private/: EProjectileBehaviourType.cpp  EProjectileDamageType.cpp  FXBaseBurstActor.cpp  IFXBurst.cpp  IFXContinuous.cpp  IOroBaseActor.cpp  IOroBaseObject.cpp  IOroDamageable.cpp  IOroPlayer.cpp  IOroPlayerCombatActions.cpp  IOroPlayerInventoryActions.cpp  IOroPlayerMobility.cpp  IOroUnrealEventsWrapper.cpp  SProjectileBehaviour.cpp  SProjectileDamage.cpp  TestActor.cpp  UOBaseObject.cpp  UOroBaseObject.cpp
Source/OroUnrealPrototype/Public/: EProjectileBehaviourType.h  EProjectileDamageType.h  FXBaseBurstActor.h  IFXBurst.h  IFXContinuous.h  IOroBaseActor.h  IOroBaseObject.h  IOroDamageable.h  IOroPlayer.h  IOroPlayerCombatActions.h  IOroPlayerInventoryActions.h  IOroPlayerMobility.h  IOroUnrealEventsWrapper.h  SProjectileBehaviour.h  SProjectileDamage.h  TestActor.h  UOBaseObject.h  UOroBaseObject.h
(+95 files in other folders)
